--- a/Biomas/style.css
+++ b/Biomas/style.css
@@ -50,6 +50,8 @@ header{
 }
 
 footer{
+    justify-content:center;
+    margin-top: 30rem;
     display: inline-flex;
     gap: 2.75rem;
     justify-content: center;
@@ -84,6 +86,3 @@ h1{
     margin-top: 0.4rem;
     font-weight:500;
 }
-
-
-
