--- a/Biomas/style.css
+++ b/Biomas/style.css
@@ -86,3 +86,89 @@ h1{
     margin-top: 0.4rem;
     font-weight:500;
 }
+
+
+.container{
+    position: relative;
+    padding: 15px;
+    max-width: 640px;
+    margin: 0 auto;
+}
+
+.gallery-wrapper{
+    overflow-x: auto;
+}
+
+.gallery{
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 15px;
+}
+
+.arrow-left,
+.arrow-right{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: auto;
+    bottom: 0;
+    font-size: 20px;
+    line-height: 250px;
+    width: 40px;
+    text-align: center;
+    color: red;
+    cursor: pointer;
+    border: none;
+    background: linear-gradient(to left, transparent 0%, white 200%);
+}
+
+.arrow-left,
+.arrow-right{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: auto;
+    bottom: 0;
+    font-size: 20px;
+    line-height: 250px;
+    width: 40px;
+    text-align: center;
+    color: red;
+    cursor: pointer;
+    border: none;
+    background: linear-gradient(to left, transparent 0%, white 200%);
+    opacity: 0.1;
+    transition: all 600ms ease-in-out;
+}
+
+.arrow-left:hover,
+.arrow-right:hover{
+    opacity: 1;
+}
+
+.arrow-right{
+    left: auto;
+    right: 0;
+    background: linear-gradient(to right, transparent 0%, white 200%);
+}
+
+.item{
+    width: 310px;
+    height: 520px;
+    flex-shrink: 0;
+    opacity: 0.6;
+    transition: all 600ms ease-in-out;
+    background-size: cover;
+    background: no-repeat center;
+    border: 2px solid red;
+}
+
+.current-item{
+    opacity: 1;
+    /*width: 280px;
+    height: 480px;*/
+}
+
+.gallery-wrapper::-webkit-scrollbar{
+    display: none;
+}
