--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -2,55 +2,255 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: white;
+}
+
+p{
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 250;
+}
+
+h4{
+    font-size: 1.75rem;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 350;
 }
 
 body{
-    min-height: 100vh;
-    background-image: url(./images/Img-Background-HomePage.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center center;
+    background-color: #111111;
 }
 
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 100px;
-    background-color: red;
+a{
+    text-decoration: none;
+}
+
+.navbar{
+    min-height: 70px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    z-index: 100;
-}
-/*
-.tela-comeco{
-    min-height: 100vh;
-    background-image: url(./images/Img-Background-HomePage.jpg) no-repeat;
-    background-size: 100%;
-    background-position: center center;
-}
-
-#titulo-principal{
-    display: flex;
-    text-align: center;
     justify-content: center;
-    margin-top: 100px;
+    margin-left: 52rem;
+    gap: 2.5rem;
 }
 
-ul{
-    list-style: none;
-}
-
-
-.navbar-down{
+.logo{
     display: flex;
-    margin-top: 28rem;
-    justify-content: right;
-    margin-right: 6rem;
+    height: 5.2rem;
+    width: 3.5rem;
+    margin-left: 2.7rem;
+    margin-top: 0.15rem;
 }
 
-.section-biomesimages{
-    margin-top: 100vh;
-} 
+header{
+    display: inline-flex;
+}
+
+footer{
+    display: inline-flex;
+    gap: 2.75rem;
+    justify-content: center;
+    padding-bottom: 3rem;
+    background-color: #111D12;
+    width: 100%;
+}
+
+.textofooter{
+    display: flex;
+    margin-top: 3.65rem;
+}
+
+#contatofooter{
+    display: flex;
+    background-color: #111D12;
+    justify-content: center;
+    padding-right: 1rem;
+}
+
+#contatofooter p{
+    opacity: 0.9;
+    font-size: 0.85rem;
+}
+
+h1{
+    display: flex;
+    font-family: "Poppins", sans-serif;
+    font-size: 2.325rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.4rem;
+    font-weight:500;
+}
+
+#homepageh1{
+    display: flex;
+    font-size: 2.85rem;
+    margin-top: 11.5rem;
+}
+
+h5{
+    text-decoration: underline;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 1.05rem;
+}
+
+h2{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+#homepageh1>p{
+    color: #598D17;
+    margin-left: 0.82rem;
+    font-weight: 700;
+}
+
+h3{
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    font-size: 1.85rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.textolink{
+    text-decoration: underline;
+    color: #D3D3D3;
+}
+
+#telainicial{
+    background-image: url(../images/Img-Background-HomePage.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    padding-bottom: 5rem;
+
+}
+
+#continenteh4{
+    display: flex;
+    margin-left: 76.5rem;
+    margin-top: 20rem;
+}
+
+#rowimagens{
+    margin-top: 7rem;
+    display: inline-flex;
+    gap: 6rem;
+    margin-left: 10.5rem;
+}
+
+#rowtexto{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.05rem;
+    margin-top: 4rem;
+}
+
+.textoimagemlink{
+    display: flex;
+    justify-content: center;
+    font-size: 1.1rem;
+}
+
+.rowbaixo{
+    margin-top: 3rem;
+}
+
+#linhagame{
+    display: flex;
+    margin-top: 5rem;
+    background-color: #14572B;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem;
+    margin: 8rem 0 4rem 0;
+}
+
+#linhabotoesgame{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+
+#buttonquiz{
+    padding: 1.8rem 2.7rem 1.8rem 2.7rem;
+    border-radius: 2rem;
+    border: none;
+    color: black;
+    background-color: #D9D9D9;
+    font-size: 1.8rem;
+}
+
+#buttoncontrole{
+    width: 11rem;
+    height: 9rem;
+}
+
+
+/* noticias section */
+#rowimagensnoticias{
+    display: inline-flex;
+    gap: 2rem;
+    justify-content: center;
+    margin-top: 1.8rem;
+    gap: 5rem;
+}
+
+#noticias{
+    display: flex;
+    flex-direction: column;
+}
+
+#noticias>hr{
+    display: flex;
+    margin-bottom: 2rem;
+    margin-top: 0.8rem;
+    width: 20rem;
+    margin-left: 36rem;
+}
+
+/* dentro do card */
+.cardnoticia{
+    display: flex;
+    flex-direction: column;
+    background-color: #D9D9D9;
+    border-radius: 0.4rem;
+    align-items: center;
+    padding-bottom: 3rem;
+}
+
+.imgnoticias{
+    width: 12rem;
+    height: 9rem;
+    padding: 0.4rem;
+    padding-bottom: 1rem;
+    border-radius: 1rem;
+}
+
+.cardnoticia>p{
+    color: black;
+    font-weight: 400;
+    text-decoration: underline;
+    font-size: 1rem;
+    padding: 0.4rem;
+}
+/* ------------------------------------ */
+
+
