--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -95,11 +95,9 @@ body {
 
 
 #sairquiz{
-    position: absolute;
-    left: 50%;
-    margin-left: -50px;
+    position:fixed;
     bottom: 4rem;
-
+    left: 40rem;
 }
 
 #buttonsairquiz{
@@ -161,10 +159,9 @@ button {
 }
 
 #contatofooter{
-    position: absolute;
-    left: 50%;
-    margin-left: -50px;
+    position: fixed;
     bottom: 0;
+    left: 40rem;
     opacity: 0.7;
     font-size: 0.85rem; 
     color: #FFFFFF;
