--- a/mataatlantica/style.css
+++ b/mataatlantica/style.css
@@ -19,11 +19,7 @@ h4{
 }
 
 body{
-    background-color: #0C110D;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    background-color: rgb(13, 18, 14);
 }
 
 a{
@@ -54,7 +50,6 @@ header{
 }
 
 footer{
-    justify-content:center;
     display: inline-flex;
     gap: 2.75rem;
     justify-content: center;
@@ -90,81 +85,56 @@ h1{
     font-weight:500;
 }
 
-#hrcomeco{
-  width: 36rem;
+h5{
+    text-decoration: underline;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 1.05rem;
 }
 
-#hrh1{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+h2{
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+h3{
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    font-size: 1.85rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 5rem;
 }
 
 
-.container {
-  position: relative;
-  padding: 15px;
-  max-width: 880px;
-  margin: 0 auto;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+#h2comeco{
+    margin-top: 1rem;
 }
 
-.gallery-wrapper {
-  overflow-x: auto;
+#conteudo{
+    display: inline-flex;
+    margin: 2.3rem 13rem 5rem 13rem;
 }
 
-.arrow-left,
-.arrow-right {
-  position: absolute;
-  top: 0;
-  left: -13px;
-  right: auto;
-  bottom: 0;
-  font-size: 20px;
-  line-height: 250px;
-  width: 40px;
-  color: #fff;
-  transition: all 600ms ease-in-out;
-  background: linear-gradient(to left, transparent 0%, black 200%);
-  opacity: 0.4;
-  cursor: pointer;
-  border: none;
+#conteudo img{
+    width: 620px;
+    height: 425px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
-.arrow-left:hover,
-.arrow-right:hover {
-  opacity: 1;
-}
-
-.arrow-right {
-  right: 0;
-  left: auto;
-  text-align: right;
-  background: linear-gradient(to right, transparent 0%, black 200%);
-}
-
-.gallery {
-  display: flex;
-  flex-flow: row nowrap;
-  gap: 40px;
-}
-
-.item {
-  width: 260px;
-  height: 430px;
-  object-fit: cover;
-  flex-shrink: 0;
-  transition: all 400ms ease-in-out;
-  filter: brightness(30%);
-  opacity: 0.7;
-}
-
-.current-item {
-  filter: brightness(100%);
-  opacity: 1;
-}
-
-.gallery-wrapper::-webkit-scrollbar {
-  display: none;
+#conteudo p{
+    text-align: left;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+    font-size: 1.125rem;
+    font-weight: 200;
 }
