--- a/Biomas/style.css
+++ b/Biomas/style.css
@@ -152,3 +152,15 @@ h3{
 .atual{
     filter: brightness(100%);
 }
+
+.botoes{
+    background-color: rgb(13, 18, 14);
+    height: 1rem;
+    width: 1rem;
+    margin-bottom: 5rem;
+    border: none;
+}
+
+.sla{
+    margin-left: -1.5rem;
+}
