--- a/Biomas/style.css
+++ b/Biomas/style.css
@@ -117,11 +117,13 @@ h3{
 #conteudo{
     display: inline-flex;
     gap: 3rem;
-    justify-content: center;
-    align-items: center;
     margin-top: 3rem;
-    margin-left: 14.5rem;
     margin-bottom: 5rem;
+}
+
+#row{
+    display: flex;
+    margin-left: 14.6%;
 }
 
 #galeria{
@@ -159,6 +161,7 @@ h3{
     width: 1rem;
     margin-bottom: 5rem;
     border: none;
+    margin-top: 9rem;
 }
 
 .sla{
