--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -94,9 +94,10 @@ body {
 
 
 #sairquiz{
-    position:fixed;
-    bottom: 4rem;
-    left: 41rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8rem;
 }
 
 #buttonsairquiz{
@@ -158,9 +159,10 @@ button {
 }
 
 #contatofooter{
-    position: fixed;
-    bottom: 0;
-    left: 41rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2.2rem;
     opacity: 0.7;
     font-size: 0.85rem; 
     color: #FFFFFF;
