--- a/Biomas/style.css
+++ b/Biomas/style.css
@@ -123,7 +123,9 @@ h3{
 
 #row{
     display: flex;
-    margin-left: 14.6%;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2.5rem;
 }
 
 #galeria{
@@ -159,9 +161,8 @@ h3{
     background-color: rgb(13, 18, 14);
     height: 1rem;
     width: 1rem;
-    margin-bottom: 5rem;
     border: none;
-    margin-top: 9rem;
+    margin-top: 9.5rem;
 }
 
 .sla{
