--- a/Continente/style.css
+++ b/Continente/style.css
@@ -110,17 +110,21 @@ h1{
     font-weight:500;
 }
 
-.hr{
-    display: flex;
-    width: 25rem;
-    margin-left: 33.3rem;
-
-}
-
 #textoimagem{
     margin-left: 22.5rem;
     padding-bottom: 6rem;
     opacity: 0.9;
+}
+
+.hr{
+    width: 23rem;
+}
+
+#hrh1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
 }
 
 
