--- a/Paises/style.css
+++ b/Paises/style.css
@@ -153,7 +153,7 @@ h3{
 }
 
 #ultimopais{
-    margin-bottom: 7rem;
+    margin-bottom: 4rem;
 }
 
 .hr{
@@ -165,4 +165,14 @@ h3{
     justify-content: center;
     align-items: center;
     margin-bottom: 6rem;
+}
+
+#botaosubir{
+    display: flex;
+    justify-content: right;
+    margin: 0 5rem 1rem;
+}
+
+html{
+    scroll-behavior: smooth;
 }
