--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -148,7 +148,7 @@ button {
 }
 
 .finish p{
-    color: #86FF84;
+    color: white;
     font-size: 1.8rem;
     font-weight: 550;
     margin-top: 2.5rem;
