--- a/Login/style.css
+++ b/Login/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     color: white;
+    font-family: "Inter", sans-serif;
 }
 
 p{
@@ -59,6 +60,14 @@ footer{
     margin-top: 6rem;
 }
 
+h3{
+    font-family: "Inter", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 2rem;
+    margin-bottom: 3.2rem;
+}
+
 .textofooter{
     display: flex;
     margin-top: 3.65rem;
@@ -95,4 +104,64 @@ h2{
     align-items: center;
     text-align: center;
     margin-top: 5rem;
+}
+
+#cardquiz{
+    background-color: #2F1900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem 26rem 2rem 26rem;
+    border-radius: 3rem;
+}
+
+#tituloquiz{
+    margin-top: 3rem;
+}
+
+
+/* botao entrar no quiz */
+#botaoenviar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#enviarbotao{
+    background-color: #273715;
+    border-radius: 2rem;
+    margin: 1rem 3rem 3rem 3rem;
+    padding: 1.3rem 4rem 1.3rem 4rem;
+    border: none;
+    text-decoration: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+
+
+/* caixas input */
+
+.input{
+    background-color: white;
+    color: black;
+    width: 25rem;
+}
+
+label{
+    font-weight: 300;
+    justify-content: left;
+    align-items: left;
+}
+
+.ultlabel{
+    margin-top: 2.3rem;
+}
+
+.pCadastro{
+    margin-top: 4rem;
+}
+
+a{
+    color: blue;
 }
